5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1595_1017.log
== SUBMITION (2019-04-14 23:41:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d = R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.163363
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 12, in <module>
    d = R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:43:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d = R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:45:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d = R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:46:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d= R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:46:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d= R*arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:47:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R* (arccos(sen(t1)  sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
print(round(d,2))

-- ERROR:
File "XXXX", line 12
    d= R* (arccos(sen(t1)  sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:48:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R* (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d= R* (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:49:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:50:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
print(round(d,2))

-- EXECUTION TIME:
0.237426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 12, in <module>
    d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:23:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:31:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d= R * (arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:33:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
a= sen=(t1)
b= sen(t2)
c= cos(t1)
d= cos(t2)
e= cos(g1-g2)

d= R * (arccos( * sen(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    b= sen(t2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:56:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- ERROR:
File "XXXX", line 12
    d=R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1−g2)
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:57:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- EXECUTION TIME:
0.21549
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:01:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*accos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- EXECUTION TIME:
0.25698
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    d=R*accos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                      ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:02:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*a

cos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- EXECUTION TIME:
0.214796
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 14
    cos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:02:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- EXECUTION TIME:
0.138528
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                     ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:02:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- ERROR:
File "XXXX", line 12
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:04:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- EXECUTION TIME:
0.212063
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                     ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:05:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- EXECUTION TIME:
0.214928
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:05:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)

print(round(d,2))

-- ERROR:
File "XXXX", line 12
    d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:10:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d,2))

-- EXECUTION TIME:
0.141756
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    d= R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2))
                                                        ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:13:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
print(round(d,2))

-- EXECUTION TIME:
0.155243
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 \u2212 g2))
                                                               ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:14:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
#R= raio medio da terra, em km
R= 6371.01
d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
print(round(d,2))

-- ERROR:
File "XXXX", line 12
    d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:15:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))

t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01
d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
print(round(d,2))

-- ERROR:
File "XXXX", line 11
    d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:16:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R= 6371.01


d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))

print(round(d,2))
-- EXECUTION TIME:
0.137348
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 13
    d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 \u2212 g2))
                                                               ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:37:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01


d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))

print(round(d,2))
-- EXECUTION TIME:
0.191636
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 13
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 \u2212 g2))
                                                                ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:37:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01


d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))

print(round(d,2))
-- EXECUTION TIME:
0.158292
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 13
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 \u2212 g2))
                                                                ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:37:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01


d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))

print(round(d,2))
-- ERROR:
File "XXXX", line 13
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:15) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01


d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))

print(round(d,2))
-- EXECUTION TIME:
0.141203
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 \u2212 g2))
                                                                ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:38:40) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01


d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))

print(round(d,2))
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:18:53) 
-- CODE:
from math import *

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))

print(round(d,2))
-- EXECUTION TIME:
0.123077
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
